{
  "version": 4,
  "terraform_version": "0.12.29",
  "serial": 16,
  "lineage": "cc4be827-a907-1623-961b-0fc1ce33973e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "bar-egress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Bar Full Open",
            "from_port": 0,
            "id": "sgrule-845917806",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0cc8b3c3c2851705a",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "baz-egress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Bar Full Open",
            "from_port": 0,
            "id": "sgrule-2990167998",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-06910b842af0d3a8f",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "baz-ingress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Baz 2",
            "from_port": 0,
            "id": "sgrule-2471889226",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [
              "pl-abb451c2"
            ],
            "protocol": "tcp",
            "security_group_id": "sg-0254c038e32f25530",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "bla-ingress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Bla 1",
            "from_port": 0,
            "id": "sgrule-3266388606",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0d290f68e48de546b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Bar 1",
            "from_port": 0,
            "id": "sgrule-929398029",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0254c038e32f25530",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "foo",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "1.2.0.0/16",
              "5.6.7.0/24"
            ],
            "description": "Foo 5",
            "from_port": 0,
            "id": "sgrule-294318973",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0254c038e32f25530",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "fucked-egress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Bar Full Open",
            "from_port": 0,
            "id": "sgrule-752281532",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d290f68e48de546b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Foo 1",
            "from_port": 0,
            "id": "sgrule-3602495974",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0254c038e32f25530",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "test-ingress-rule",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Test 1",
            "from_port": 0,
            "id": "sgrule-3970541193",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0254c038e32f25530",
            "self": true,
            "source_security_group_id": "sg-0254c038e32f25530",
            "to_port": 65535,
            "type": "ingress"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "test-ingress-rule-bis",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 0,
            "id": "sgrule-1872529830",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "icmp",
            "security_group_id": "sg-0254c038e32f25530",
            "self": true,
            "source_security_group_id": "sg-0254c038e32f25530",
            "to_port": 0,
            "type": "ingress"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "bar-egress-stream",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Stream",
            "from_port": 10,
            "id": "sgrule-894498715",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "5",
            "security_group_id": "sg-0cc8b3c3c2851705a",
            "self": false,
            "source_security_group_id": null,
            "to_port": 55,
            "type": "egress"
          }
        }
      ]
    }
  ]
}